[metadata]
name = geoCosiCorr3D
version = 2.4.1
author = Saif Aati
author_email = saif@caltech.edu, saifaati@gmail.com
description = Geospatial COSI-Corr 3D
long_description = file: README.md, NEWS.md
long_description_content_type = text/markdown
url = https://github.com/SaifAati/geoCosiCorr3D.git
platform = unix, linux, win64, osx

classifiers =
    programming Language :: Python :: 3.8

license : GNU General Public  License v3 (GPLv3)
license_file = LICENSE

[options]
packages =
    geoCosiCorr3D

install_requires =
	affine6p~=1.0
	astropy~=6.0
	click~=8.1
	click-plugins~=1.1
	geojson~=3.1
	geopandas~=0.14
	jupyter~=1.0
	ipp
	matplotlib~=3.8
	mypy~=1.8
	opencv-contrib-python~=4.9
	p-tqdm~=1.4
	Pillow~=10.2
	psutil~=5.9
	pytest~=8.0
	pytest-cov~=4.1
	PyYAML~=6.0
	rasterio~=1.3
	regex>=2023.12.25
	requests~=2.31
	scikit-image~=0.22
	scikit-learn~=1.4
	scipy~=1.11
	seaborn~=0.13
	tk~=0.1
	ttkthemes~=3.2
	tox
	isort

python_requires = >=3.8

zip_safe = no
[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
geoCosiCorr3D = py.typed

[flake8]
max-line-length = 160